--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </head>
 
 <body>
-  <header><img src="./images/logo.svg" alt=""></header>
-  <main>
+  <header class="container"><img src="./images/logo.svg" alt=""></header>
+  <main class="container">
     <div class="bg"></div>
     <article>
       <h1 class="poppins">Build The Community Your Fans Will Love</h1>
@@ -35,7 +35,7 @@
     </article>
   </main>
 
-  <footer>
+  <footer class="footer container">
     <ul>
       <li><a href="">
           <img src="./images/F.png" alt="">
